--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -8,7 +8,7 @@
 
             <div>
                 <small>{{ post.host }}</small>
-                <h2><a >{{ post.title }}</a></h2>
+                <h2><a href="{% url 'post' post.id %}">{{ post.title }}</a></h2>
                 <hr>
             </div>
 
