feat: Added post creation in project

--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -3,6 +3,8 @@
 {% block content %}
 
     <div>
+        <p><a href="{% url 'create-post' %}">Create post</a></p>
+        <hr>
 
         {% for post in posts %}
 
