--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,12 @@
 <a href="/">
     <h1>HOME</h1>
 </a>
-<p>Hello {{ request.user }}</p>
+{% if user.is_authenticated %}
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
+{% if user.is_authenticated %}
+    <p>Hello {{ user }}</p>
+{% endif %}
 <hr>
