--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -1,15 +1,25 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <div>
-        <form method="POST" action="">
-            {% csrf_token %}
-            <label>Username: </label>
-            <input type="text" placeholder="Enter username..." name="username"/>
-            <br>
-            <label>Enter password</label>
-            <input type="text" placeholder="Enter username..." name="password">
-            <input type="submit" value="Submit"/>
-        </form>
-    </div>
+    {% if page == 'login' %}
+        <div>
+            <form method="POST" action="">
+                {% csrf_token %}
+                <label>Username: </label>
+                <input type="text" placeholder="Enter username..." name="username"/>
+                <br>
+                <label>Enter password</label>
+                <input type="text" placeholder="Enter username..." name="password">
+                <input type="submit" value="Submit"/>
+            </form>
+        </div>
+    {% elif page == 'register' %}
+        <div>
+            <form method="POST" action="">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+    {% endif %}
 {% endblock %}
